# wgraphite

./: .gitmodules  Cargo.toml
graphite_plot/: Cargo.toml
graphite_plot/assets/: line_shader.wgsl  point_shader.wgsl
graphite_plot/src/: camera.rs  draw.rs  force_plot.rs  lib.rs  main.rs  plot_graphic.rs  plot_window.rs  spectral_plot.rs
graphite_plot_3d/: Cargo.toml
graphite_plot_3d/assets/: line_shader.wgsl  point_shader.wgsl
graphite_plot_3d/src/: camera.rs  draw.rs  force_plot.rs  lib.rs  main.rs  mouse.rs  plot_graphic.rs  texture.rs
recycle_bin/: draw.rs  graph_plot.rs
