[package]
name = "graphite_plot_3d"
version = "0.1.0"
edition = "2024"

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
winit = { version = "0.30.9", features = ["rwh_05"] }
env_logger = "0.11.7"
log = "0.4"
wgpu = "24.0.3"
cfg-if = "1"
pollster = "0.4.0"
bytemuck = "1.22.0"
cgmath = "0.18.0"
rand = "0.9.0"
instant = "0.1.13"
gscientific = { path = "../gscientific"}

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
parking_lot = { version = "0.11.1", features = ["wasm-bindgen"]}
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}

